--- a/LMSv4/backend/package.json
+++ b/LMSv4/backend/package.json
@@ -9,10 +9,15 @@
     },
     "dependencies": {
         "bcryptjs": "^3.0.2",
+        "cloudinary": "^1.41.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^7.0.0"
+        "mongoose": "^7.0.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
+        "jsonwebtoken": "^9.0.0",
+        "path": "^0.12.7"
     },
     "devDependencies": {
         "nodemon": "^2.0.22"
