Update Vercel configuration to include middleware
Added middleware directory to includeFiles in Vercel config.

--- a/LMSv4/vercel.json
+++ b/LMSv4/vercel.json
@@ -16,7 +16,8 @@
                 "includeFiles": [
                     "backend/models/**",
                     "backend/routes/**",
-                    "backend/utils/**"
+                    "backend/utils/**",
+					"backend/middleware/**"
                 ]
             }
         },
@@ -42,4 +43,5 @@
             "dest": "frontend/$1"
         }
     ]
+
 }
