--- a/LMSv4/vercel.json
+++ b/LMSv4/vercel.json
@@ -40,8 +40,9 @@
         },
         {
             "src": "/(.*)",
-            "dest": "frontend/$1"
+            "dest": "frontend/**"
         }
     ]
 
 }
+
