Update vercel.json to fix frontend routing

--- a/LMSv4/vercel.json
+++ b/LMSv4/vercel.json
@@ -40,9 +40,10 @@
         },
         {
             "src": "/(.*)",
-            "dest": "frontend/**"
+            "dest": "frontend/$1"
         }
     ]
 
 }
+
 
